--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "Casino bot discord.js",
   "dependencies": {
     "@discordjs/voice": "^0.18.0",
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "axios": "1.7.7",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
